<!--
  ~ Copyright 2020 Google LLC
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     https://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources>
    <string name="app_name">Droid Jump</string>
    <string name="play_text">Play</string>
    <string name="choose_level_text">Choose level</string>
    <string name="new_game_text">New game</string>

    <!-- Strings used for fragments for navigation -->
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="how_to_play">How to play?</string>

    <string name="fail_text">Game Over</string>
    <string name="success_text">You Win</string>
    <string name="menu_button">Menu button</string>
    <string name="how_to_play_description">
        The purpose of the game is to avoid obstacles, pass levels, earn achievements and have fun!
        \nTo make droid jump, tap on the left side of the screen.
        \nTo make droid crouch, tap and hold on the right side of the screen</string>
    <string name="sign_out">Sign out</string>
    <string name="leaderboards">Leaderboards</string>
    <string name="achievements">Achievements</string>
    <string name="friends">Friends</string>
    <string name="username">Name Surname</string>
    <string name="restart_text">Restart</string>
    <string name="main_menu">Main menu</string>
    <string name="player_rank">"Rank "</string>
    <string name="score_text">"Score: "</string>
    <string name="player_avatar">Player avatar</string>
    <string name="sign_in">Sign in</string>
    <string name="play_game_services">Play Game Services</string>
    <string name="load_more">Load More</string>
    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="unlocked_section_name">Unlocked</string>
    <string name="locked_section_name">Locked</string>
    <string name="date">Date</string>
    <string name="friends_empty_list_text">No friends yet</string>
    <string name="empty_leaderboards_list_text">No leaderboards yet</string>
    <string name="empty_scores_list_text">No scores yet</string>
    <string name="achievement_icon">Achievement icon</string>
    <string name="hidden_achievement_name">Secret</string>
    <string name="hidden_achievement_description">Keep playing to learn more.</string>
    <string name="experience_poins">Experience points</string>
    <string name="date_caption_for_locked_achievements">Last updated</string>
    <string name="date_caption_for_unlocked_achievements">Earned</string>
    <string name="steps_completed">Steps completed</string>
    <string name="video_recording">Video recording</string>
    <string name="failed_to_load_achievemets_toast_text">Oops, something went wrong with getting achievements</string>
    <string name="saveg_games">Saved Games</string>
</resources>
