<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2020 Google LLC
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     https://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:id="@+id/nav_items"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_friends"
            android:icon="@drawable/pgs_icon"
            android:title="@string/friends" />
        <item
            android:id="@+id/nav_achievements"
            android:icon="@drawable/achievements_icon"
            android:title="@string/achievements" />
        <item
            android:id="@+id/nav_leaderboards"
            android:icon="@drawable/leaderboards_icon"
            android:title="@string/leaderboards" />
    </group>
    <group android:id="@+id/nav_recording_items">
        <item
            android:id="@+id/nav_video_recording"
            android:title="@string/video_recording" />
    </group>
    <group android:id="@+id/nav_footer">
        <item
            android:id="@+id/nav_auth"
            android:title="@string/sign_in" />
    </group>
</menu>
