<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2020 Google LLC
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     https://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/score_linear_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_vertical"
    android:paddingVertical="@dimen/fab_margin"
    android:paddingHorizontal="@dimen/very_small_margin">

    <androidx.cardview.widget.CardView
        android:id="@+id/player_avatar_card_view"
        android:layout_width="@dimen/player_avatar_size"
        android:layout_height="@dimen/player_avatar_size"
        app:cardCornerRadius="@dimen/player_avatar_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/player_avatar"
            style="@style/MatchParent"
            android:contentDescription="@string/player_avatar" />
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:id="@+id/player_info"
        style="@style/WrapContent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/player_avatar_card_view"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/player_username"
            android:layout_marginStart="@dimen/fab_margin"
            android:layout_marginLeft="@dimen/fab_margin"
            android:text="@string/username"
            android:textColor="@android:color/black"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:textStyle="bold"/>

        <LinearLayout
            style="@style/WrapContent">

            <TextView
                android:id="@+id/player_score_text"
                style="@style/ScoreText"
                android:layout_marginStart="@dimen/fab_margin"
                android:layout_marginLeft="@dimen/fab_margin"
                android:text="@string/score_text" />

            <TextView
                android:id="@+id/player_score"
                style="@style/ScoreText" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        style="@style/WrapContent"
        android:layout_marginEnd="@dimen/very_small_margin"
        android:layout_marginRight="@dimen/very_small_margin"
        android:gravity="center_vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/player_rank_text"
            style="@style/WrapContent"
            android:text="@string/player_rank" />

        <TextView
            android:id="@+id/player_rank"
            style="@style/WrapContent" />

        <androidx.cardview.widget.CardView
            android:id="@+id/friend_section"
            android:layout_width="@dimen/friend_icon_size"
            android:layout_height="@dimen/friend_icon_size"
            android:layout_marginStart="@dimen/fab_margin"
            android:layout_marginLeft="@dimen/fab_margin"
            app:cardCornerRadius="@dimen/player_avatar_size">

            <ImageView
                android:id="@+id/friend_icon"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:contentDescription="@string/friends"
                android:src="@mipmap/ic_friends" />
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
