<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2020 Google LLC
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     https://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@android:color/black">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="@dimen/nav_width"
            android:background="@android:color/black"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.cardview.widget.CardView
                android:layout_width="@dimen/user_avatar_size"
                android:layout_height="@dimen/user_avatar_size">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/progressbar_layout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:visibility="gone">

                    <TextView
                        android:id="@+id/progress_text"
                        style="@style/ProgressBarText"
                        android:textSize="@dimen/regular_text_size"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:ignore="MissingConstraints" />

                    <ProgressBar
                        android:id="@+id/progress_bar"
                        style="@style/CircularDeterminateProgressBar"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <ImageView
                    android:id="@+id/achievement_icon"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/achievement_icon"
                    android:visibility="visible" />
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/achievement_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/fab_margin"
                android:gravity="center_horizontal"
                android:text="@string/achievements"
                android:textAlignment="center"
                android:textColor="@android:color/white" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@drawable/title_rounded_box"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="@dimen/fab_margin"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout"
            app:layout_constraintVertical_bias="0.0">

            <TextView
                android:id="@+id/achievement_description"
                style="@style/AchievementDescriptionText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/double_fab_margin"
                android:text="@string/description" />

            <LinearLayout
                android:id="@+id/progress_info_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/fab_margin"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:visibility="gone">

                <TextView
                    android:id="@+id/steps"
                    style="@style/RegularText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/steps_completed" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/xp_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="horizontal"
                android:layout_marginBottom="@dimen/fab_margin"
                android:visibility="visible">

                <TextView
                    android:id="@+id/xp_caption"
                    style="@style/RegularText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/experience_poins" />

                <TextView
                    android:id="@+id/xp_value"
                    style="@style/RegularText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/space_margin" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/date_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="horizontal"
                android:visibility="visible">

                <TextView
                    android:id="@+id/date_caption"
                    style="@style/RegularText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/date_caption_for_locked_achievements" />

                <TextView
                    android:id="@+id/date"
                    style="@style/RegularText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/space_margin" />
            </LinearLayout>
        </LinearLayout>

        <ImageButton
            android:id="@+id/back_button"
            style="@style/WhiteBackButton"
            android:contentDescription="@string/menu_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.drawerlayout.widget.DrawerLayout>
